# applied-computer-science-htw-berlin

./: .gitignore
ampelFarben/src/: AmpelFarbenMain.java
annuitaetenDarlehen/src/: AnnuitaetenDarlehen.java  AnnuitaetenDarlehenMain.java  Interaktionen.java
bruchrechnung/src/: Bruch.java  BruchrechnungMain.java
effective-java/: pom.xml
einstieg/src/: ErstesProgrammMain.java
fahrkartenautomat/src/: Eingaben.java  Fahrkartenautomat.java  Kasse.java
jdbc/src/: JDBC_Connection.java
lineareAbschreibung/src/: LinearAbschreiber.java  LineareAbschreibungMain.java
mastermind/src/: Mastermind.java  MastermindMain.java
medienversand/src/: Buch.java  CD.java  Genre.java  MedienVerkaufsStatistik.java  MedienversandMain.java  Medium.java
papierformate/src/: Interaktionen.java
sem1_c/: 05-1 Muster der Datei SConstruct und Doxyfile.odt  SConstruct
sem1_c/array/: CMakeLists.txt  SConstruct  array  array_main.c  arrays.c  interaktionen.c  statistik.c  statistik.h
sem1_c/benzin_verbrauch/: CMakeLists.txt  SConstruct  antwort_ja_oder_nein.nsd  benzin_verbrauch  berechne_durchschnittsverbrauch_l_pro_100km.nsd  berechne_durchschnittsverbrauch_us_mi_pro_gal.nsd  berechne_verbrauch_benzin.c  berechne_verbrauch_benzin.h  durchschnittsverbrauch_benzin_main.c  durchschnittsverbrauch_benzin_main.nsd  erfasse_ganze_zahl.nsd  erfasse_gleitkomma_zahl.nsd  erfasse_zahlen.c  erfasse_zahlen.h  gib_durchschnittsverbrauch_l_pro_100km.nsd  gib_durchschnittsverbrauch_us_mi_pro_gal.nsd  index.html  interaktionen.c  interaktionen.h  spezifikation.odt  spezifikation_berechne_verbrauch_benzin.odt  spezifikation_erfasse_zahlen.odt  spezifikation_interaktionen.odt  umrechnung_durchschnittsverbrauch.nsd
sem1_c/char_ausgabe/: CMakeLists.txt  SConstruct  char_ausgabe  char_ausgabe.c
sem1_c/die_kugel/: CMakeLists.txt  SConstruct  die_kugel  die_kugel_main.c  interaktionen.c  laengeneinheiten.h  mathe.c  mathe.h
sem1_c/fahrtenkosten/: CMakeLists.txt  SConstruct  dokumentation.html  fahrtenkosten  fahrtenkosten_main.c  interaktionen.c  interaktionen.h  kosten.h  laengeneinheiten.c  laengeneinheiten.h  rauminhalt.h  verbrauch.h  zahlensystem.c  zahlensystem.h
sem1_c/hallo_welt/: CMakeLists.txt  hallo_welt  hallo_welt.c
sem1_c/kalender/: CMakeLists.txt  SConstruct  Verknüpfung mit index.html  interaktionen.c  kalender  kalender.h  kalender_main.c
sem1_c/lib/: arrays.h  dokumentation.html  geometrie.c  geometrie.h  interaktionen.h  kalender.c  kosten.c  laengeneinheiten.c  rauminhalt.c  statistik.h  verbrauch.c  waehrungen.c  waehrungen.h  zahlensystem.c  zinsgeschaeft.c
sem1_c/lotto/: CMakeLists.txt  SConstruct  arrays.c  arrays.h  lotto  lotto.c  lotto.h  lotto_main.c  statistik.c  zahlensystem.h
sem1_c/mehrwertsteuer/: CMakeLists.txt  Doxyfile  (+5 more)
sem1_c/sammelbilderproblem/: CMakeLists.txt  SConstruct  arrays.h  sammelbilderproblem  sammelbilderproblem.c  sammelbilderproblem.h  sammelbilderproblem_main.c  statistik.c  statistik.h
sem1_c/vier_gewinnt/: CMakeLists.txt  SConstruct  arrays.c  interaktionen.c  interaktionen.h  vier_gewinnt  vier_gewinnt.c  vier_gewinnt.h  vier_gewinnt_main.c
sem3_cpp/: SConstruct
sem3_cpp/bruchrechnung/: CMakeLists.txt  SConstruct  bruch.c++  bruch.h  bruchrechner  bruchrechner.c++  bruchrechner.h  bruchrechnung_main.c++  zufallsgenerator.h
textdatei/: pg6343.txt  test.txt
(+324 files in other folders)
